...
    <string name="my_local_ip">My local ip is:</string>
    <string name="connect_ip_hint">127.0.0.1</string>
    <string name="connect_port_hint">port</string>
    <string name="default_port">8080</string>
    <string name="connect_to">Connect to IP</string>
    <string name="connect">connect</string>
    <string name="view_chain">View Chain</string>
    <string name="reset_database_button">Clear Database (closes app)</string>
    <string name="connection_info_text">Info</string>
    <string name="institution_login">Login as an Educational Institution</string>
    <string name="student_register">Register as a student</string>
    <string name="fingerprint_auth">Fingerprint Authentication</string>
    <string name="device_name">device_name</string>
    <string name="mac">MAC</string>
    <string name="up">Up:</string>
    <string name="down">Down:</string>
    <string name="username_insert">Enter a username: </string>
    <string name="confirm">Confirm</string>
    <string name="login_credentials">Login with your credentials</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="digid_register">Register once with DigiD</string>
    <string name="login_choice">How do you want to login?</string>

...
    <string name="bluetooth_button">Bluetooth</string>
    <string name="qr_scan_button">Scan QR</string>
    <string name="camera_permissions_required">Camera permissions required</string>
    <string name="camera_permisions_required_long">To scan QR codes, the application needs permission to access the camera.</string>
    <string name="current_funds">Current Funds</string>

    <string name="send">Send</string>
    <string name="developer_mode">Developer Mode</string>

    <!-- Menu -->
    <string name="menu_item_1">My Chain</string>
    <string name="menu_item_2">Clear Entire Inbox</string>
    <string name="menu_info">Info</string>
...
    <string name="symbolExplanationText">Explanation</string>

    <!--- info chain explorer -->
    <string name="color_info">Color is based on the hash of the public key.</string>

    <!--- inbox -->
    <string name="new_user">+ Find new users</string>
    <string name="inbox">Open Inbox</string>

    <string name="import_tokens">Import Tokens</string>
    <string name="export_tokens">Export Tokens</string>
    <string name="funds">Funds</string>
    <string name="transactions">Transactions</string>

...
